...
"addMedia.alert.errorLoading.title" = "Error Loading Media";

/* The label of the button to dismiss the 'add media' sheet */
"addMedia.navBar.button.close" = "Close";

/* Navigation bar title of the 'add media' sheet */
"addMedia.navBar.title" = "Add Media";

/* The title of the add to lists view, which lets the user select a list to add a media object to. */
"addToList.title" = "Add to List...";

/* The cancel button in the add to lists view that dismisses the view without choosing a list. */
"addToList.toolbar.buttons.cancel" = "Cancel";
...
"apiError.updateError.description" = "Error updating the media. If this issue persists, please try to reload the library in the settings.";

/* The title of an alert informing the user about an error while loading the cast information */
"detail.alert.errorLoadingCastTitle" = "Error Loading Cast";

/* Button of an alert to confirm adding a new tag */
"detail.alert.newTag.button.add" = "Add";

/* Text of an alert for adding a new tag */
"detail.alert.newTag.message" = "Enter a name for the new tag.";

/* Title of an alert for adding a new tag */
"detail.alert.newTag.title" = "New Tag";

/* Rename button to confirm renaming a tag */
"detail.alert.renameTag.button.rename" = "Rename";

/* Message of the tag renaming alert */
"detail.alert.renameTag.message" = "Enter a new name for the tag.";

/* Title of the tag renaming alert */
"detail.alert.renameTag.title" = "Rename Tag";
...
"detail.alert.tagAlreadyExists.message" = "There is already a tag with that name.";

/* Message of an alert informing the user that the tag they tried to create already exists */
"detail.alert.tagAlreadyExists.title" = "Tag Already Exists";

/* The button label in the detail of a media object that leads to the cast information. */
"detail.basicInfo.cast" = "Cast";

/* The section header for the basic information section in the detail view */
"detail.basicInfo.header" = "Basic Information";

/* The headline for the 'description' property in the detail view */
"detail.basicInfo.headline.description" = "Description";
...
"detail.notes.navBar.title" = "Notes";

/* The navigation bar title for the seasons info in the detail view */
"detail.seasonsInfo.navBar.title" = "Seasons";

/* The navigation bar title for the tags in the detail view */
"detail.tags.navBar.title" = "Tags";

/* The section header for the user data section in the detail view */
"detail.userData.header" = "User Data";

/* The headline for the 'notes' property in the detail view */
"detail.userData.headline.notes" = "Notes";
...
"detail.userData.headline.watched" = "Watched?";

/* Label in the detail view of a media object that describes the absence of any user-provided notes. */
"detail.userData.noNotes" = "No Notes";

/* The label of the tag list in the user data section of the detail view specifying that there are no tags for this media. */
"detail.userData.tags.none" = "None";

/* The picker value of the detail view's user data section which the user chooses if they did not watch the media object */
"detail.userData.watched.picker.notWatched" = "No";

/* The picker value of the detail view's user data section which the user chooses if they watched the media object partially */
"detail.userData.watched.picker.partiallyWatched" = "Partially";

/* The picker value of the detail view's user data section which the user chooses if they watched the media object */
"detail.userData.watched.picker.watched" = "Yes";
...
"library.list.movieSymbolText" = "Movie";

/* A SF Symbols name describing a series/tv show (e.g. 's.square'). Used in the library list beneath the name. */
"library.list.showSymbolText" = "TV Show";

/* The label for the delete swipe action in the library list */
"library.list.swipe.delete" = "Delete";

/* The label for the reload swipe action in the library list */
"library.list.swipe.reload" = "Reload";

/* The label of the filter button in the navigation bar's menu */
"library.navBar.button.filter" = "Filter";
...
"settings.actions.importTags.label" = "Import Tags";

/* The label for the 'reload media' action in the settings view */
"settings.actions.reloadMedia.label" = "Reload Library";

/* The label for the 'reset library' action in the settings view */
"settings.actions.resetLibrary.label" = "Reset Library";

/* The label for the 'reset tags' action in the settings view */
"settings.actions.resetTags.label" = "Reset Tags";

/* The label for the 'update media' action in the settings view */
"settings.actions.updateMedia.label" = "Update Library";

/* Message of an alert informing the user that the purchase could not be completed because the in-app purchase could not be found / is not configured */
"settings.alert.errorBuyingPro.message" = "The requested In-App Purchase was not found.";
...
"sortingOrder.rating" = "Rating";

/* A type of sorting order (name, release date, ...) */
"sortingOrder.releaseDate" = "Release Date";

/* The label of the library tab of the main TabView */
"tabView.library.label" = "Library";

/* The label of the lists tab of the main TabView */
"tabView.lists.label" = "Lists";

/* The label of the lookup tab of the main TabView */
"tabView.lookup.label" = "Lookup";

/* The label of the problems tab of the main TabView */
"tabView.problems.label" = "Problems";

/* The label of the settings tab of the main TabView */
"tabView.settings.label" = "Settings";

"library.list.action.addToList" = "Add to List...";

"detail.menu.addToWatchlist" = "Add to Watchlist";

"detail.menu.removeFromWatchlist" = "Remove from Watchlist";
...

"lists.detail.placeholder" = "Select a media";
"lists.root.placeholder" = "Select a list";
"addMedia.detail.placeholder" = "Select a search result";
"resolveProblems.detail.placeholder" = "Select a media";
"library.detailPlaceholder" = "Select a media";
"generic.editButtonDone" = "Done";
"generic.editButtonEdit" = "Edit";
"generic.dismissViewDone" = "Done";
"lists.detail.configure" = "Configure...";

"lists.alerts.newList.buttons.add" = "Add";
"library.searchPlaceholder" = "Search my Library";
"lists.watchlist.watchState.watchedSeasonOfMax %lld %lld" = "Season %lld of %lld";
...
