...
                #endif

                config.activeSheet = .addMedia(initialSearchText: "")
            } label: {
                Image(systemName: "plus")
            }
            .accessibilityIdentifier("add-media")
        }
    }
}

